--- a/README
+++ b/README
@@ -1,12 +1,13 @@
-== Teste Agence
+# Teste Agence
 
-Pré-requisitos:
+## Pré-requisitos
+
 - Banco de dados postgresql
   - Criar uma tabela chamada cars com as colunas id (serial), car_number (varchar), license_plate(varchar), registration_date(data)
 - RVM
 - Conhecimentos com testes
 
-== Objetivos
+## Objetivos
 
 Este projeto é algo que um desenvolvedor pode encontrar em seu dia a dia e exemplifica o que acreditamos ser qualidades para lidar com um determinado projeto usando testes.
 
@@ -15,45 +16,57 @@ Regras:
   - Não podem existir dois carros com a mesma placa ou chassi. Encontrando duplicatas deve manter data mais atual.
   - Os testes serão levados em consideração como pontos positivos.
 
-1 - Instale a versão 2.2.2 usando rvm
+1. Instale a versão 2.2.2 usando rvm
 
 rvm install 2.2.2
 
-2 - Baixe o projeto e entre na pasta para criar a gemset automaticamente
+2. Baixe o projeto e entre na pasta para criar a gemset automaticamente
 
+```
 git clone
 cd prova-ruby
+```
 
-3 - Instale o bundler
+3. Instale o bundler
 
+```
 gem install bundler
+```
 
-4 - Instale faça o setup das gems do projeto
+4. Instale faça o setup das gems do projeto
 
+```
 bundle
+```
 
-5 - Para executar os testes execute
+5. Para executar os testes execute
 
+```
 bundle exec rspec
+```
 
-6 - Organização do projeto
+6. Organização do projeto
 
-config
+- config
   - Configuração do banco de dados
-download
+- download
   - Exemplos de arquivo a ser importado
-lib
+- lib
   - Conexão com o banco de dados
   - Biblioteca de importação com conexão ao banco
   - Classe para log
-spec
+- log
+  - Log de importações
+- spec
   - Testes
 
-7 - Rode a importação
+7. Rode a importação
 
-ruby lib/import_file.rb
+```
+ruby import.rb
+```
 
-8 - Extras
+8. Extras
 
 - A classe Log é auxiliar ao projeto e pode ajudar a entender o que está acontecendo no decorrer do código.
 - Use mocha ou outra gem para simular dados. Não há necessidade de criar um banco de testes.
